--- a/css/styles.css
+++ b/css/styles.css
@@ -1,6 +1,7 @@
 *{
     margin: o;
     padding: 0;
+    text-decoration: none;
 }
 body{
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
@@ -78,6 +79,9 @@ footer{
     font-size: 0.9em;
 }
 #Menus{
+    text-decoration: none; /* Elimina el subrayado del enlace */
+    color: inherit; /* Mantiene el color del texto de los padres */
+    cursor: pointer; /* Mantiene el cursor de mano para enlaces */
     width: 40%;
     height: 15vh;
     display: flex;
@@ -95,6 +99,8 @@ footer{
     height: 12vh;
     color: black;
 }
+
+
 #contenedor{
     display: flex;
     align-items: center;
@@ -373,6 +379,7 @@ div img {
 }
 .fondo-negro{
     background-color: black;
+    opacity: 70%;
 }
 #Cambio-de-menu,#Cambio-de-menu+label{
     display: none;
